--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==1.9.5
 django-toolbelt==0.0.1
 gunicorn==19.6.0
 passlib==1.6.5
+Pillow==3.3.0
 pkg-resources==0.0.0
 psycopg2==2.6.2
 static3==0.7.0
